# FoxClip-VALORANT

./: .gitignore  CMakeLists.txt  README.md  README_ja.md  config.cpp  config.json  lockfile.cpp  main.cpp  vcpkg.json
.github/workflows/: build-exe.yml
api/: api_getter.bat
api/help/: 20250814-235621_help.json
src/: config.cpp  config.h  lockfile.cpp  lockfile.h  logger.cpp  logger.h  main.cpp  websocket_client.cpp  websocket_client.h
